add update receipt functionality
